--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -308,27 +308,141 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "2**3"
+      ],
       "metadata": {
-        "id": "F_X-wxdm_5Ys"
+        "id": "F_X-wxdm_5Ys",
+        "outputId": "e80db355-f7fb-4fff-df74-289f86081f88",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Base = 3\n",
+        "Exponente = 4\n",
+        "Base ** Exponente\n"
+      ],
+      "metadata": {
+        "id": "gKmBbhII_5b9",
+        "outputId": "912e1c82-1878-4fbf-ec10-da8d5a8b491c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "81"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "7%3"
+      ],
+      "metadata": {
+        "id": "fIugsxNy_53j",
+        "outputId": "4a4b090a-2689-49e7-c46f-f6bdb672ec9c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "23%3"
+      ],
+      "metadata": {
+        "id": "XtHw4sZoWk2m",
+        "outputId": "85b0a9de-0be9-4e37-b3d0-7623a08473f9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "15//2"
+      ],
+      "metadata": {
+        "id": "LJsVscCZWpKV",
+        "outputId": "27e1aa4e-1b45-49e7-e0b6-d77742ef8ff3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "gKmBbhII_5b9"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "fIugsxNy_53j"
+        "id": "zxqnUHlhWxP-"
       },
       "execution_count": null,
       "outputs": []
@@ -556,9 +670,399 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "nombre = input(\"Digita tu Nombre\")"
+      ],
+      "metadata": {
+        "id": "zbH_9i3q_PdY",
+        "outputId": "4deb8549-4b92-4a46-f572-63e007dd6965",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Digita tu NombreJohn\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nombre\n"
+      ],
+      "metadata": {
+        "id": "JZy1Q9Tl_PgL",
+        "outputId": "632c44c0-d336-49a6-c4f8-8f9b732f51c9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'John'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(nombre)"
+      ],
+      "metadata": {
+        "id": "R_MAthrffXFN",
+        "outputId": "d5ba49af-e2d3-4555-a761-5d8a25863abd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cdtMeta=int(input(\"Digita la Meta de CDT:\"))"
+      ],
+      "metadata": {
+        "id": "MH2ma9wBfczz",
+        "outputId": "208bfae7-e865-4904-e157-66a1baa32e33",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Digita la Meta de CDT:3500000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cdtEjec=int(input(\"Digita la Ejecucion de CDT:\"))"
+      ],
+      "metadata": {
+        "id": "NWdNeHqQh805",
+        "outputId": "5fd20897-aef9-41d8-92ae-4e53739534a1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Digita la Ejecucion de CDT:8000000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "porcEje=cdtMeta/cdtEjec"
+      ],
+      "metadata": {
+        "id": "ayjoymmeiKcr"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "porcEje"
+      ],
+      "metadata": {
+        "id": "PIwMwgf5iVf8",
+        "outputId": "16cf4f2d-a9f5-492e-e12d-e9e4656f3358",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.4375"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "porcEje*100"
+      ],
+      "metadata": {
+        "id": "u-rsjLxoiXcK",
+        "outputId": "3edbc20d-de0e-44bd-888c-6e4cb7619e20",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "43.75"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"{porcEje} %\")\n"
+      ],
+      "metadata": {
+        "id": "9Ae14RxjicBr",
+        "outputId": "ff547b3f-5fee-4243-dd30-37e40af840cb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.4375 %\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"{porcEje*100} %\")"
+      ],
+      "metadata": {
+        "id": "JozVIIOojSN2",
+        "outputId": "870da6c1-06f5-4e38-b94e-12da34051887",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "43.75 %\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"La ejecucion de CDT fue del: {porcEje*100}%\")"
+      ],
+      "metadata": {
+        "id": "QFgXYaIkjbIV",
+        "outputId": "4da9f23c-cd81-480b-f25a-0822b23d3376",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La ejecucion de CDT fue del: 43.75%\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nombre_alumno = 'Penélope Camacho'\n",
+        "edad_alumno = 11\n",
+        "media_alumno = 9.95\n",
+        "print('Nombre del alumno es %s, tiene %d años y su media es %f.' %(nombre_alumno, edad_alumno, media_alumno))"
+      ],
+      "metadata": {
+        "id": "uB8UYi9Bjo_v",
+        "outputId": "d114634f-ca91-41c6-edac-19b42c3a1f51",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nombre del alumno es Penélope Camacho, tiene 11 años y su media es 9.950000.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nombre_alumno = 'Penélope Camacho'\n",
+        "print('Nombre del alumno: {}'.format(nombre_alumno))"
+      ],
+      "metadata": {
+        "id": "P08UWct4lSdj",
+        "outputId": "de281e3c-4941-42fe-f41b-2db85ebe9a5a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nombre del alumno: Penélope Camacho\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nom=input(\"Digita tu Nombre:\")\n",
+        "print(f\"Hola {nom}\")"
+      ],
+      "metadata": {
+        "id": "IgHlIdZ2lppz",
+        "outputId": "e2e9348d-14e7-4c1c-cfd6-d0c849ab88b4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digita tu Nombre:John\n",
+            "Hola John\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nom=input(\"Digita tu Nombre:\")\n",
+        "edad=input(\"Digita tu Edad: \")\n",
+        "print(f\"Hola {nom} tu edad es {edad}\")"
+      ],
+      "metadata": {
+        "id": "W6BfHjx3mawO",
+        "outputId": "708207e4-b5af-4431-c37d-e38cb9915d73",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digita tu Nombre:Juan\n",
+            "Digita tu Edad: 45\n",
+            "Hola Juan tu edad es 45\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nom=input(\"Digita tu Nombre: \")\n",
+        "edad=input(\"Digita tu Edad: \")\n",
+        "est=input(\"Digita tu estaura: \")\n",
+        "print(f\"Hola {nom}\\ntu edad es: {edad} \\nEstatura: {est}\")"
+      ],
+      "metadata": {
+        "id": "TF8dKw-DmuMX",
+        "outputId": "26a36f90-0dee-4699-c17f-9be0e152ae52",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digita tu Nombre: Pedro\n",
+            "Digita tu Edad: 35\n",
+            "Digita tu estaura: 1.74\n",
+            "Hola Pedro\n",
+            "tu edad es: 35 \n",
+            "Estatura: 1.74\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "zbH_9i3q_PdY"
+        "id": "GsvaPc8KnjJg"
       },
       "execution_count": null,
       "outputs": []
@@ -567,7 +1071,61 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "JZy1Q9Tl_PgL"
+        "id": "Ltipv2JjnXZI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "T2fuBBhhjECH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "_zIFpNSDi6Pk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "jock_eAPiwsk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "bj0ZaA0Yiu10"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8GAnQypzil2E"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ZLH7reu2h5fG"
       },
       "execution_count": null,
       "outputs": []
