Se creó con Colab

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -653,165 +653,10 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# todo lo que sescriba es coentario"
-      ],
+      "source": [],
       "metadata": {
         "id": "pa4gLncu-mvU"
       },
-      "execution_count": 1,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "\"\"\"\n",
-        "Eso tambien es un comentario\n",
-        "\"\"\""
-      ],
-      "metadata": {
-        "id": "_cWRmDiE-m4p",
-        "outputId": "5b654855-5102-487f-dbca-c2cc028fba6f",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
-      },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'\\nEso tambien es un comentario\\n'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 3
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "if 2<3:\n",
-        "  print(\"si 2 es menor que 3\")\n",
-        ""
-      ],
-      "metadata": {
-        "id": "48MDBvs21J5a",
-        "outputId": "bac93ae3-6c85-4eb1-b2e2-3f2c1428cd4b",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "si 2 es menor que 3\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "if 2==3:\n",
-        "  print(\"si 2 es menor \")\n",
-        "else:\n",
-        "  print(\"es Mayor\")\n",
-        "print(\"salio del if\")"
-      ],
-      "metadata": {
-        "id": "Vs4-0QRM1ZdT",
-        "outputId": "d5da0c32-5441-4d6e-8b3d-07fdded299fc",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "es Mayor\n",
-            "salio del if\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "edad_maria = int(input('Ingrese la edad de María: '))\n",
-        "edad_beatriz = int(input('Ingrese la edad de Beatriz: '))\n",
-        "\n",
-        "if edad_maria > edad_beatriz:\n",
-        "  print('María es mayor que Beatriz.')"
-      ],
-      "metadata": {
-        "id": "y7VRdal32vsv",
-        "outputId": "5f3415ff-ff8b-47af-d103-19fa18a6b7f4",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 13,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Ingrese la edad de María: 15\n",
-            "Ingrese la edad de Beatriz: 20\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "edad_maria = int(input('Ingrese la edad de María: '))\n",
-        "edad_beatriz = int(input('Ingrese la edad de Beatriz: '))\n",
-        "\n",
-        "if edad_maria > edad_beatriz:\n",
-        "  print('María es mayor que Beatriz.')\n",
-        "else:\n",
-        "  print('María es menor que Beatriz.')"
-      ],
-      "metadata": {
-        "id": "v-G8sKBf3xtQ",
-        "outputId": "42651444-0446-43f3-d6a1-2d7576ddbc8a",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Ingrese la edad de María: 15\n",
-            "Ingrese la edad de Beatriz: 20\n",
-            "María es menor que Beatriz.\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "UMml-kc-4Cmo"
-      },
       "execution_count": null,
       "outputs": []
     },
@@ -819,77 +664,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "pxU3VrMs2j59"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "7HynVPri2h9t"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "nkYJ1qVh16B7"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "edad_maria = int(input('Ingrese la edad de María: '))\n",
-        "edad_beatriz = int(input('Ingrese la edad de Beatriz: '))\n",
-        "\n",
-        "if edad_maria > edad_beatriz:\n",
-        "  print('María es mayor que Beatriz.')\n",
-        "else:\n",
-        "  print('María es menor que Beatriz.')"
-      ],
-      "metadata": {
-        "id": "x8xbVwH11zG0",
-        "outputId": "970f8359-b541-4f81-bdc8-4f9c139e98c9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Ingrese la edad de María: 45\n",
-            "Ingrese la edad de Beatriz: 20\n",
-            "María es mayor que Beatriz.\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "v= True\n",
-        "f= False\n"
-      ],
-      "metadata": {
-        "id": "VQod4_ze4K2J"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "KSItOmkt1vyD"
+        "id": "_cWRmDiE-m4p"
       },
       "execution_count": null,
       "outputs": []
@@ -1048,132 +823,9 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "n1 = float(input(\"Digite Numero 1:\"))\n",
-        "n2 = float(input(\"Digite Numero 2:\"))\n",
-        "suma = 1\n",
-        "resta = 2\n",
-        "mult = 3\n",
-        "div = 4\n",
-        "tipo = int(input(\"Digite el numero segun la operacion que quiere realizar: 1 para Suma, 2 para Resta, 3 para Multiplicacion, 4 para division\"))\n",
-        "if tipo == suma:\n",
-        "  res = n1 + n2\n",
-        "  print(f\"El resultado de la suma es:{res}\")\n",
-        "elif tipo == resta:\n",
-        "  res = n1 - n2\n",
-        "  print(f\"El resultado de la resta es:{res}\")\n",
-        "elif tipo == 3:\n",
-        "   res = n1 * n2\n",
-        "   print(f\"El resultado de la Multiplicacion es:{res}\")\n",
-        "elif tipo == 4:\n",
-        "   res = n1/n2\n",
-        "   print(f\"El resultado de la Division es:{res}\")\n",
-        "else:\n",
-        "   print(\"El numero no corresponde a una Operacion\")\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        ""
-      ],
-      "metadata": {
-        "id": "C21JmOuK-VU8",
-        "outputId": "2745d91a-7a5e-4ded-b429-6fd479dc4d19",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 33,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Digite Numero 1:45\n",
-            "Digite Numero 2:6\n",
-            "Digite el numero segun la operacion que quiere realizar: 1 para Suma, 2 para Resta, 3 para Multiplicacion, 4 para division5\n",
-            "El numero no corresponde a una Operacion\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "R-L_1P2AERar"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "YE6lvo-sENDg"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "rMdkml4VEInh"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "2sLCTl0nEDnQ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "AaaGu8MxD-Xh"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "oG3HgJMyD6UA"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "yLrzN8I6DuI3"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "GG5ZXxPjDp__"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "dCZunKWhDfII"
+        "id": "C21JmOuK-VU8"
       },
       "execution_count": null,
       "outputs": []
@@ -1378,46 +1030,28 @@
     {
       "cell_type": "code",
       "source": [
-        "lista = 'Juan Pérez, María González, Pedro Rodríguez, Ana López, Carlos Martínez,Laura Sánchez, José García, Elena Fernández, Luis Morales, Carmen Torres,David Ruiz, Isabel Ramírez, Javier Díaz, Sara Herrera, Miguel Castro,Patricia Ortega, Francisco Vargas, Marta Jiménez, Manuel Medina, Rosa Molina,Alejandro Silva, Silvia Ruiz, Andrés Torres, Natalia Soto, Diego Guerrero,Paula Ríos, Ricardo Navarro, Alicia Cordero, Carlos Vidal, Lorena Gómez'"
+        "print(\"Vamos a Construir un Tirangulo\")\n",
+        "LadoA = int(input(\"Ingrese 1er lado del triangulo: \"))\n",
+        "LadoB = int(input(\"Ingrese 2dp lado del triangulo: \"))\n",
+        "LadoC = int(input(\"Ingrese 3er lado del triangulo: \"))\n"
       ],
       "metadata": {
-        "id": "gPPN9BCT-Mki"
-      },
-      "execution_count": 17,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "nombre_1 = 'Miguel Castro'\n",
-        "nombre_2 = 'Marcelo Noguera'"
-      ],
-      "metadata": {
-        "id": "VMKQHzGZ8pzN"
-      },
-      "execution_count": 18,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "if nombre_1 in lista:\n",
-        "  print(\"si esta\")"
-      ],
-      "metadata": {
-        "id": "4VkOogfJ8veP",
-        "outputId": "e71cec62-5e1d-4df8-d7d4-9c279a307d00",
+        "id": "gPPN9BCT-Mki",
+        "outputId": "e7f54c47-186a-4817-ff82-f8a747935d6d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "si esta\n"
+            "Vamos a Construir un Tirangulo\n",
+            "Ingrese 1er lado del triangulo: 5\n",
+            "Ingrese 2dp lado del triangulo: 6\n",
+            "Ingrese 3er lado del triangulo: 8\n"
           ]
         }
       ]
@@ -1425,44 +1059,85 @@
     {
       "cell_type": "code",
       "source": [
-        "if nombre_1 in lista and nombre_2 in lista:\n",
-        "  print(\"si esta\")"
+        "print(\"Vamos a Construir un Tirangulo\")\n",
+        "LadoA = int(input(\"Ingrese 1er lado del triangulo: \"))\n",
+        "LadoB = int(input(\"Ingrese 2dp lado del triangulo: \"))\n",
+        "LadoC = int(input(\"Ingrese 3er lado del triangulo: \"))\n",
+        "if LadoA == LadoB and LadoC == LadoB:\n",
+        "  print(\"Triangulo Equilatero\")\n",
+        "elif LadoA == LadoB or LadoA == LadoC or LadoB == LadoC:\n",
+        "  print(\"Triangulo con lados diferentes\")\n"
       ],
       "metadata": {
-        "id": "-B74M0Hv9L8f"
-      },
-      "execution_count": 21,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "if nombre_1 in lista or nombre_2 in lista:\n",
-        "  print(\"si esta\")"
-      ],
-      "metadata": {
-        "id": "0vxwciHi9XXe",
-        "outputId": "797baadd-0402-4733-bd94-bcc3526df9c3",
+        "id": "ipQCdHHqit0c",
+        "outputId": "1739d51b-4ba3-41b4-caf4-a80b36114797",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "si esta\n"
+            "Vamos a Construir un Tirangulo\n",
+            "Ingrese 1er lado del triangulo: 5\n",
+            "Ingrese 2dp lado del triangulo: 5\n",
+            "Ingrese 3er lado del triangulo: 5\n",
+            "Triangulo Equilatero\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(\"Vamos a Construir un Tirangulo\")\n",
+        "LadoA = int(input(\"Ingrese 1er lado del triangulo: \"))\n",
+        "LadoB = int(input(\"Ingrese 2dp lado del triangulo: \"))\n",
+        "LadoC = int(input(\"Ingrese 3er lado del triangulo: \"))\n",
+        "if LadoA == LadoB and LadoC == LadoB:\n",
+        "  print(\"Triangulo Equilatero\")\n",
+        "elif LadoA == LadoB or LadoA == LadoC or LadoB == LadoC:\n",
+        "  print(\"Triangulo con lados diferentes\")"
+      ],
       "metadata": {
-        "id": "tJKGa-TX9eLm"
+        "id": "Jnhd5mF0nhFl",
+        "outputId": "292b51a4-a602-4b4a-841b-bffc5210ee1c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Vamos a Construir un Tirangulo\n",
+            "Ingrese 1er lado del triangulo: 5\n",
+            "Ingrese 2dp lado del triangulo: 6\n",
+            "Ingrese 3er lado del triangulo: 5\n",
+            "Triangulo con lados diferentes\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Vamos a Construir un Tirangulo\")\n",
+        "LadoA = int(input(\"Ingrese 1er lado del triangulo: \"))\n",
+        "LadoB = int(input(\"Ingrese 2dp lado del triangulo: \"))\n",
+        "LadoC = int(input(\"Ingrese 3er lado del triangulo: \"))\n",
+        "if LadoA == LadoB and LadoC == LadoB:\n",
+        "  print(\"Triangulo Equilatero\")\n",
+        "elif LadoA == LadoB or LadoA == LadoC or LadoB == LadoC:\n",
+        "  print(\"Triangulo con lados diferentes\")"
+      ],
+      "metadata": {
+        "id": "qC0UdTt9nmXx"
       },
       "execution_count": null,
       "outputs": []
@@ -1471,7 +1146,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "hqa5r46V9Ibn"
+        "id": "0L__QTdTid5S"
       },
       "execution_count": null,
       "outputs": []
@@ -1480,7 +1155,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "gwcnTEQ_8hhs"
+        "id": "RkHGr_5-iGJL"
       },
       "execution_count": null,
       "outputs": []
