Se creó con Colab

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -110,11 +110,11 @@
         "    print(dato)"
       ],
       "metadata": {
-        "id": "TXgNvvYE9eFu",
-        "outputId": "ddcc6037-75d5-414c-dcdc-561d2a95456c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "TXgNvvYE9eFu",
+        "outputId": "ddcc6037-75d5-414c-dcdc-561d2a95456c"
       },
       "execution_count": 4,
       "outputs": [
@@ -142,40 +142,150 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "precios = [100.0, 400.0, 200.0]\n",
+        "suma = sum(precios)\n",
+        "suma"
+      ],
       "metadata": {
-        "id": "foT-pJZ798cZ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "foT-pJZ798cZ",
+        "outputId": "fd701d0d-2dd0-4e92-d7f2-aed18eb47194"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "700.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "print(nombres)"
+        "help(print)"
       ],
       "metadata": {
-        "id": "cgOwyGnz9k6J",
-        "outputId": "c55463db-e5ea-446e-f17a-15639b173870",
+        "id": "IVlNvCZi-siJ",
+        "outputId": "05c15659-0546-4bf1-8343-6e967a678763",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 141
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'nombres' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-3-8241e76bc5e5>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnombres\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'nombres' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Help on built-in function print in module builtins:\n",
+            "\n",
+            "print(*args, sep=' ', end='\\n', file=None, flush=False)\n",
+            "    Prints the values to a stream, or to sys.stdout by default.\n",
+            "    \n",
+            "    sep\n",
+            "      string inserted between values, default a space.\n",
+            "    end\n",
+            "      string appended after the last value, default a newline.\n",
+            "    file\n",
+            "      a file-like object (stream); defaults to the current sys.stdout.\n",
+            "    flush\n",
+            "      whether to forcibly flush the stream.\n",
+            "\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista = [1,2,3]\n",
+        "dir(lista)"
+      ],
+      "metadata": {
+        "id": "leZeu7YR-z1J",
+        "outputId": "7a4b2290-a0c6-4f1c-a989-104be30ba301",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['__add__',\n",
+              " '__class__',\n",
+              " '__class_getitem__',\n",
+              " '__contains__',\n",
+              " '__delattr__',\n",
+              " '__delitem__',\n",
+              " '__dir__',\n",
+              " '__doc__',\n",
+              " '__eq__',\n",
+              " '__format__',\n",
+              " '__ge__',\n",
+              " '__getattribute__',\n",
+              " '__getitem__',\n",
+              " '__getstate__',\n",
+              " '__gt__',\n",
+              " '__hash__',\n",
+              " '__iadd__',\n",
+              " '__imul__',\n",
+              " '__init__',\n",
+              " '__init_subclass__',\n",
+              " '__iter__',\n",
+              " '__le__',\n",
+              " '__len__',\n",
+              " '__lt__',\n",
+              " '__mul__',\n",
+              " '__ne__',\n",
+              " '__new__',\n",
+              " '__reduce__',\n",
+              " '__reduce_ex__',\n",
+              " '__repr__',\n",
+              " '__reversed__',\n",
+              " '__rmul__',\n",
+              " '__setattr__',\n",
+              " '__setitem__',\n",
+              " '__sizeof__',\n",
+              " '__str__',\n",
+              " '__subclasshook__',\n",
+              " 'append',\n",
+              " 'clear',\n",
+              " 'copy',\n",
+              " 'count',\n",
+              " 'extend',\n",
+              " 'index',\n",
+              " 'insert',\n",
+              " 'pop',\n",
+              " 'remove',\n",
+              " 'reverse',\n",
+              " 'sort']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "kSczDgz_-7dR"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1118,9 +1228,55 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lista = [2172.54, 3701.35, 3518.09, 3456.61, 3249.38, 2840.82, 3891.45, 3075.26, 2317.64, 3219.08]\n"
+      ],
       "metadata": {
         "id": "gPPN9BCT-Mki"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista"
+      ],
+      "metadata": {
+        "id": "U0jFr2nAAe25",
+        "outputId": "7721c5f9-4f9c-4014-8f23-20e2b1aa2db5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[2172.54,\n",
+              " 3701.35,\n",
+              " 3518.09,\n",
+              " 3456.61,\n",
+              " 3249.38,\n",
+              " 2840.82,\n",
+              " 3891.45,\n",
+              " 3075.26,\n",
+              " 2317.64,\n",
+              " 3219.08]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "pU4TgZTWAgnx"
       },
       "execution_count": null,
       "outputs": []
